--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ "/assets/css/styles.css" | relative_url }}">
-
   </head>
   <body>
+    <nav>
     {% include navigation.html %}
     {{ content }}
+    </nav>
   </body>
 </html>
