--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,199 @@
-.current {
-    color: green;
+body {
+  background:rgb(230, 167, 196);
+  line-height: 1.5em;
+}
+
+body {
+  display: grid;
+  grid-gap: 0; 
+  grid-template-areas:
+    "topnav"
+    "header"
+    "content"
+    "footer";
+}
+
+.topnav {
+  grid-area: topnav; 
   }
+
+header {
+  grid-area: header;
+}
+
+.content {
+  grid-area: content; 
+}
+
+footer {
+  grid-area: footer;
+}
+
+.topnav {
+  background: rgb(199, 92, 163); 
+}
+
+header {
+  background: rgb(163, 75, 144); 
+}
+
+.content{
+  background: rgb(187, 68, 134);
+}
+
+footer {
+  background: rgb(151, 28, 96); 
+}
+  
+header,
+.content,
+footer {
+  padding: 1em; 
+}
+
+header h1 {
+  color: #fff;
+  line-height: 1.2;
+  font-weight: normal;
+}
+
+.topmenu {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;     
+}
+
+.topmenu li {
+  display: inline-block;
+  border: 0;
+  border-bottom: 1px solid purple; 
+  padding: 0;
+  margin:0;
+}
+
+.topmenu li {
+  border: 0;
+  padding: 0;
+  border-bottom: 1px solid pink; 
+}
+
+img, video {
+  max-width: 100%;
+  height: auto;
+}
+
+img {
+  display: block; 
+}
+  
+figure {
+  margin:0; 
+  border: 1px solid black;
+}
+
+.myndabox {
+  width: 163px;
+  grid-gap: 0;
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-areas: 
+  "einn"
+  "tveir"
+  "trir"
+  "fjorir";
+}
+
+@media screen and (min-width: 37.5em) {
+  
+  body {
+      display: grid;
+      grid-gap: 0; 
+      grid-template-areas:
+        "topnav"
+        "header"
+        "content"
+        "footer";
+  }
+  
+  .myndabox {
+      width: 318px;
+      grid-gap: 0;
+      display: grid;
+      margin-left: auto;
+      margin-right: auto;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: 
+      "einn tveir"
+      "trir fjorir";
+  }
+}
+@media screen and (min-width: 60em) {
+  
+  body {
+      display: grid;
+      grid-gap: 0; 
+      grid-template-areas:
+        "topnav"
+        "header"
+        "content"
+        "footer";
+  }
+
+  .myndabox {
+      width: 486px;
+      grid-gap: 0;
+      display: grid;
+      margin-left: auto;
+      margin-right: auto;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-areas: 
+      "einn tveir trir fjorir";
+  }
+      
+  .topmenu {
+      display: block;
+      padding: 0;
+      margin: 0;
+      list-style: none;     
+  }
+  
+  .topmenu li {
+      display: inline-block;
+      border: 0;
+      border-bottom: 1px solid purple; 
+      padding: 0;
+      margin:0;
+  }
+  
+  .topmenu li {
+      border: 0;
+      padding: 0;
+      border-bottom: 1px solid lightgoldenrodyellow; 
+  }
+  
+  li {
+    float: left;
+  }
+    
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li a, .dropbtn {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover, .dropbtn {
+  background-color: red;
+}
